--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -98,7 +98,7 @@
     <string name="accessibility_service_description">请在手机设置中搜索数字健康并启用它。</string>
     <string name="support_olauncher_for_free">使用我们的亚马逊附属链接免费支持 Olauncher。</string>
     <string name="support_olauncher_message">每次您使用我们的链接购买商品时，我们都会获得少量佣金。请保存链接并在网上购物时使用它。 谢谢！</string>
-    <string name="open">打开链接</string>
+    <string name="open_link">打开链接</string>
     <string name="copy">复制</string>
     <string name="close">关闭</string>
     <string name="not_now">暂时不要</string>
