--- a/app/src/main/res/values-hr/strings.xml
+++ b/app/src/main/res/values-hr/strings.xml
@@ -64,7 +64,7 @@
     <string name="lock_layout_description">lock layout description to be used a unique id to lock screen</string>
     <string name="support_olauncher_for_free">Besplatno podrži Olauncher korištenjem naše sponzorske poveznice za Amazon.</string>
     <string name="support_olauncher_message">Svaki puta kada kupiš nešto pomoću naše poveznice, mi primimo malu naknadu. Molimo spremi poveznicu i koristi ju svaki puta kada kupuješ online.\nHvala ti!</string>
-    <string name="open">Otvori poveznicu</string>
+    <string name="open_link">Otvori poveznicu</string>
     <string name="copy">Kopiraj</string>
     <string name="close">Zatvori</string>
     <string name="public_roadmap">Javni plan razvoja Olaunchera</string>
