--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -82,7 +82,7 @@
     <string name="accessibility_service_description">The accessibility permission is required to enable double tap to lock. Any data acquired by Olauncher via this service will not leave your device.</string>
     <string name="support_olauncher_for_free">Support Olauncher for free by using our Amazon affiliate link.</string>
     <string name="support_olauncher_message">Every time you buy something using our link, we get a small commission. Please save the link and use it whenever you shop online.\nThank you!</string>
-    <string name="open">Open link</string>
+    <string name="open_link">Open link</string>
     <string name="copy">Copy</string>
     <string name="close">Close</string>
     <string name="not_now">Not now</string>
@@ -144,4 +144,11 @@
     <string name="review_message">Olauncher is free and always will be. It has no ads, collects no data, and helps you reduce screen time for a healthier digital life.
         \n\nWe believe a minimal launcher is a great choice, and we hope you enjoy it. Tell the world what you think!</string>
     <string name="alignment_changed">Alignment changed ✅</string>
+    <string name="apply">Apply</string>
+    <string name="open">Open</string>
+    <string name="cancel">Cancel</string>
+    <string name="app_delay_message">Are you sure?</string>
+    <string name="delay">Delay</string>
+    <string name="minutes">minutes</string>
+    <string name="seconds">seconds</string>
 </resources>
