--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -147,7 +147,9 @@
     <string name="apply">Apply</string>
     <string name="open">Open</string>
     <string name="cancel">Cancel</string>
-    <string name="app_delay_message">Are you sure?</string>
+    <string name="open_with_delay_dialog_title">Reminder</string>
+    <string name="change_app_delay_dialog_title">Change delay</string>
+    <string name="open_with_delay_dialog_message">Life is short.</string>
     <string name="delay">Delay</string>
     <string name="minutes">minutes</string>
     <string name="seconds">seconds</string>
